welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: not found: value tv
if (tv(a) && tv(b)) {return Math.max(a,b)}
    ^max1020:2: error: not found: value tv
if (tv(a) && tv(b)) {return Math.max(a,b)}
             ^max1020:3: error: not found: value tv
  else if (tv(a)) {return a}
           ^max1020:4: error: not found: value tv
  else if (tv(b)) {return b}
           ^