welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
if (tv(a) && tv(b)) {return Math.max(a,b)}
  else if (tv(a)) {return a}
  else if (tv(b)) {return b}
  else {return 0}
}


def dv(a:Int):Boolean= {
  if (a<=50 && a>=40) {return true}
  else  {return false}
}